[package]
name = "my-engine"
version = "0.1.0"
authors = ["Ben Hansen <https://github.com/sotrh>"]
edition = "2018"


[dependencies]
anyhow = "1.0.95"
bytemuck = { version = "1.16", features = [ "derive" ] }
cfg-if = "1"
ultraviolet = "0.9.0"
env_logger = "0.10"
tokio = { version = "1.42.0", features = ["full"] }
log = "0.4"
tobj = { version = "3.2.5", default-features = false, features = ["async"]}
wgpu = "22.0"
sdl2 = { version = "0.37.0", features = ["raw-window-handle"]}


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
